import { describe, it, expect } from 'vitest';

import { generateContracts } from '../../../src/generator/contracts-generator.js';
import { RefResolver } from '../../../src/parser/ref-resolver.js';
import type { OpenAPIDocument } from '../../../src/types/openapi.js';

/**
 * Build a minimal OpenAPI spec with the given version and component schemas.
 * The `/test` endpoint is included so the spec has paths (required in 3.0).
 */
function makeSpec(version: string, schemas: Record<string, unknown>): OpenAPIDocument {
  return {
    openapi: version.startsWith('3.0') ? '3.0.3' : '3.1.0',
    info: { title: 'Test API', version: '1.0.0' },
    components: { schemas },
    paths: {
      '/test': {
        get: {
          responses: {
            '200': {
              description: 'OK',
              content: {
                'application/json': {
                  schema: {
                    type: 'object',
                    properties: {},
                  },
                },
              },
            },
          },
        },
      },
    },
  } as unknown as OpenAPIDocument;
}

/**
 * Generate contracts output for the given spec.
 * `preserveRefSiblings` controls $ref sibling merging behavior.
 */
function generateOutput(doc: OpenAPIDocument, preserveSiblings: boolean): string {
  const resolver = new RefResolver(doc, undefined, {
    preserveRefSiblings: preserveSiblings,
  });
  return generateContracts(doc, resolver);
}

/**
 * Strip the auto-generated header line that contains the version string,
 * so outputs from different OpenAPI versions can be compared.
 */
function stripHeader(output: string): string {
  return output.replace(
    /^\/\/ Auto-generated by genoc from OpenAPI [\d.]+ spec\. DO NOT EDIT\.\n/,
    ''
  );
}

describe('cross-version equivalence', () => {
  describe('nullable equivalence', () => {
    it("3.0 nullable:true and 3.1 type:['string','null'] produce identical TypeScript types", () => {
      const spec30 = makeSpec('3.0', {
        NullableString: { type: 'string', nullable: true },
      });

      const spec31 = makeSpec('3.1', {
        NullableString: { type: ['string', 'null'] },
      });

      const output30 = generateOutput(spec30, false);
      const output31 = generateOutput(spec31, false);

      expect(stripHeader(output30)).toBe(stripHeader(output31));
      expect(output30).toMatchSnapshot();
    });
  });

  describe('exclusiveMinimum equivalence', () => {
    it('3.0 exclusiveMinimum:boolean + minimum and 3.1 exclusiveMinimum:number produce identical output', () => {
      const spec30 = makeSpec('3.0', {
        Score: {
          type: 'number',
          minimum: 7,
          exclusiveMinimum: true,
        },
      });

      const spec31 = makeSpec('3.1', {
        Score: {
          type: 'number',
          exclusiveMinimum: 7,
        },
      });

      const output30 = generateOutput(spec30, false);
      const output31 = generateOutput(spec31, false);

      expect(stripHeader(output30)).toBe(stripHeader(output31));
      expect(output30).toMatchSnapshot();
    });
  });

  describe('example equivalence', () => {
    it('3.0 example and 3.1 examples produce identical output', () => {
      const spec30 = makeSpec('3.0', {
        Label: { type: 'string', example: 'foo' } as unknown as Record<string, unknown>,
      });

      const spec31 = makeSpec('3.1', {
        Label: { type: 'string', examples: ['foo'] } as unknown as Record<string, unknown>,
      });

      const output30 = generateOutput(spec30, false);
      const output31 = generateOutput(spec31, false);

      expect(stripHeader(output30)).toBe(stripHeader(output31));
      expect(output30).toMatchSnapshot();
    });
  });

  describe('$ref sibling divergence', () => {
    it('3.0 mode (preserveRefSiblings:false) ignores siblings, 3.1 mode preserves them — outputs differ', () => {
      const doc: OpenAPIDocument = {
        openapi: '3.1.0',
        info: { title: 'Test API', version: '1.0.0' },
        components: {
          schemas: {
            Target: {
              type: 'object',
              properties: { id: { type: 'string' } },
              description: 'Original target description',
            },
            RefWithSibling: {
              $ref: '#/components/schemas/Target',
              description: 'Override from sibling',
            } as unknown as Record<string, unknown>,
          },
        },
        paths: {
          '/test': {
            get: {
              responses: {
                '200': {
                  description: 'OK',
                  content: {
                    'application/json': {
                      schema: { type: 'object', properties: {} },
                    },
                  },
                },
              },
            },
          },
        },
      } as unknown as OpenAPIDocument;

      const output30Mode = generateOutput(doc, false);
      const output31Mode = generateOutput(doc, true);

      // With preserveRefSiblings:false, the sibling description is ignored
      // and the target's "Original target description" is used for JSDoc.
      expect(output30Mode).not.toContain('/** Override from sibling */');

      // The two outputs must be DIFFERENT — this is the expected divergence.
      expect(stripHeader(output30Mode)).not.toBe(stripHeader(output31Mode));

      expect(output30Mode).toMatchSnapshot();
      expect(output31Mode).toMatchSnapshot();
    });
  });

  describe('full spec equivalence', () => {
    it('comprehensive 3.0 and 3.1 specs with nullable, exclusiveMinimum, and example produce identical output', () => {
      const spec30 = makeSpec('3.0', {
        Widget: {
          type: 'object',
          properties: {
            name: { type: 'string', nullable: true },
            score: {
              type: 'number',
              minimum: 0,
              exclusiveMinimum: true,
            },
            label: { type: 'string', example: 'default' },
          },
          required: ['name', 'score'],
        },
      });

      const spec31 = makeSpec('3.1', {
        Widget: {
          type: 'object',
          properties: {
            name: { type: ['string', 'null'] },
            score: { type: 'number', exclusiveMinimum: 0 },
            label: {
              type: 'string',
              examples: ['default'],
            } as unknown as Record<string, unknown>,
          },
          required: ['name', 'score'],
        },
      });

      const output30 = generateOutput(spec30, false);
      const output31 = generateOutput(spec31, false);

      expect(stripHeader(output30)).toBe(stripHeader(output31));

      expect(output30).toMatchSnapshot();
    });
  });
});
